[gd_scene load_steps=19 format=3 uid="uid://dmup6q2t00bxk"]

[ext_resource type="Script" uid="uid://vdyydm74rcc1" path="res://Base/Scripts/ScreenPrefab.gd" id="1_ei8ir"]
[ext_resource type="Texture2D" uid="uid://vjxx2hispj77" path="res://AssetPacks/1_Intro/Images/Lad_Tutorial_1.png" id="3_7ltpq"]
[ext_resource type="RichTextEffect" uid="uid://bgkjiglchibw" path="res://Base/RichTextEffects/RichTextFadeIn.tres" id="4_kkmuj"]
[ext_resource type="Script" uid="uid://c1w20ghdrcrm0" path="res://Base/Scripts/LabelController.gd" id="5_q6r75"]
[ext_resource type="RichTextEffect" uid="uid://bvl0th5qdb5ld" path="res://Base/RichTextEffects/RichTextFadeIn2.tres" id="6_muhe5"]
[ext_resource type="FontVariation" uid="uid://donwlhnvg10ac" path="res://AssetPacks/0_Shared/Fonts/NotoSansSC-Normal.tres" id="7_c3pe2"]
[ext_resource type="RichTextEffect" uid="uid://cl08kjpofuevw" path="res://Base/RichTextEffects/RichTextFadeIn3.tres" id="7_t058n"]
[ext_resource type="Texture2D" uid="uid://d5yh0bb3esgc" path="res://AssetPacks/0_Shared/Images/ScenarioIcon_Info.png" id="8_lhgno"]
[ext_resource type="PackedScene" uid="uid://4k2jk6jxassl" path="res://AssetPacks/0_Shared/Prefabs/bubble.tscn" id="8_yiaac"]
[ext_resource type="Texture2D" uid="uid://bbonymoh5rncf" path="res://AssetPacks/0_Shared/Images/OutlineNineSprite.png" id="9_7ly4h"]
[ext_resource type="Texture2D" uid="uid://c0ortbqv272ad" path="res://AssetPacks/0_Shared/Images/ScenarioIcon_Emergency.png" id="10_38vxp"]
[ext_resource type="Script" uid="uid://loedrtlvs64f" path="res://Base/Scripts/Description.gd" id="10_lhgno"]
[ext_resource type="Texture2D" uid="uid://bx3d51dbnrf23" path="res://AssetPacks/0_Shared/Images/ScenarioIcon_Location.png" id="11_e2mk7"]
[ext_resource type="Script" uid="uid://pomjtlbypnca" path="res://Base/Scripts/Bubble.gd" id="13_04xjp"]
[ext_resource type="Texture2D" uid="uid://csf8mlhy8lscb" path="res://AssetPacks/2_Interpreter/Images/Lad_Phone.png" id="14_7ly4h"]
[ext_resource type="Texture2D" uid="uid://8dxmcgllnwae" path="res://AssetPacks/0_Shared/Images/Ellipse 2.png" id="15_1tbva"]
[ext_resource type="Texture2D" uid="uid://kbik121pa55i" path="res://AssetPacks/0_Shared/Images/BubbleNineSprite.png" id="15_38vxp"]
[ext_resource type="Texture2D" uid="uid://dvdo17nw6ffcu" path="res://AssetPacks/0_Shared/Images/pointing_hand.png" id="16_wvcp0"]

[node name="InterpreterCall_Prefab" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 100
script = ExtResource("1_ei8ir")
debugging = true

[node name="Explanation_MC" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 70

[node name="Explanation_VB" type="VBoxContainer" parent="Explanation_MC"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="LadTutorial1_C" type="Control" parent="Explanation_MC/Explanation_VB"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="LadTutorial1" type="TextureRect" parent="Explanation_MC/Explanation_VB/LadTutorial1_C"]
layout_mode = 0
offset_left = -155.0
offset_top = 149.0
offset_right = 205.0
offset_bottom = 496.0
texture = ExtResource("3_7ltpq")
stretch_mode = 5

[node name="Explanation1_RTL" type="RichTextLabel" parent="Explanation_MC/Explanation_VB"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
fit_content = true
custom_effects = [ExtResource("6_muhe5")]
script = ExtResource("5_q6r75")
debugging = true

[node name="Explanation2_RTL" type="RichTextLabel" parent="Explanation_MC/Explanation_VB"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
fit_content = true
custom_effects = [ExtResource("7_t058n")]
script = ExtResource("5_q6r75")
debugging = true

[node name="Scenario_VB" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="Scenario_Title_MC" type="MarginContainer" parent="Scenario_VB"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 20

[node name="Scenario_Title_L" type="Label" parent="Scenario_VB/Scenario_Title_MC"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
theme_override_fonts/font = ExtResource("7_c3pe2")
theme_override_font_sizes/font_size = 16
text = "INTERPRETER_2_SCENARIO_T1"
uppercase = true

[node name="Scenario_Info_MC" type="MarginContainer" parent="Scenario_VB" node_paths=PackedStringArray("descriptionText")]
custom_minimum_size = Vector2(0, 83)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 80
script = ExtResource("10_lhgno")
_debug = true
_updateInEditor = true
adjust_top = true
top_multiplier = 26.0
top_addition = 5.0
adjust_bottom = true
bottom_multiplier = 0.0
bottom_addition = 80.0
descriptionText = NodePath("Info_C/Info_TR/Info_RTL")

[node name="Info_C" type="Control" parent="Scenario_VB/Scenario_Info_MC"]
layout_mode = 2

[node name="Info_TR" type="TextureRect" parent="Scenario_VB/Scenario_Info_MC/Info_C"]
visible = false
z_index = 1
custom_minimum_size = Vector2(80, 83)
layout_mode = 2
offset_right = 80.0
offset_bottom = 83.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(40, 41.5)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("8_lhgno")
expand_mode = 1

[node name="Info_RTL" type="RichTextLabel" parent="Scenario_VB/Scenario_Info_MC/Info_C/Info_TR"]
visible = false
z_as_relative = false
clip_contents = false
custom_minimum_size = Vector2(195, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.14
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 76.0
offset_right = 186.0
offset_bottom = -15.385
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(-22, 60)
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "INTERPRETER_2_SCENARIO_T2"
fit_content = true
scroll_active = false
custom_effects = [ExtResource("4_kkmuj")]
script = ExtResource("5_q6r75")
debugging = true

[node name="Info_NPR" type="NinePatchRect" parent="Scenario_VB/Scenario_Info_MC/Info_C/Info_TR/Info_RTL"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -10.0
offset_right = 14.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("9_7ly4h")
draw_center = false
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Scenario_Emergency_MC" type="MarginContainer" parent="Scenario_VB" node_paths=PackedStringArray("descriptionText")]
custom_minimum_size = Vector2(0, 83)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 57
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 80
script = ExtResource("10_lhgno")
_debug = true
_updateInEditor = true
adjust_top = true
top_multiplier = 26.0
top_addition = 5.0
adjust_bottom = true
bottom_multiplier = 0.0
bottom_addition = 80.0
descriptionText = NodePath("Emergency_C/Emergency_TR/Emergency_RTL")

[node name="Emergency_C" type="Control" parent="Scenario_VB/Scenario_Emergency_MC"]
layout_mode = 2

[node name="Emergency_TR" type="TextureRect" parent="Scenario_VB/Scenario_Emergency_MC/Emergency_C"]
visible = false
z_index = 1
custom_minimum_size = Vector2(80, 83)
layout_mode = 2
offset_right = 80.0
offset_bottom = 83.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(40, 41.5)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("10_38vxp")
expand_mode = 1

[node name="Emergency_RTL" type="RichTextLabel" parent="Scenario_VB/Scenario_Emergency_MC/Emergency_C/Emergency_TR"]
visible = false
z_as_relative = false
clip_contents = false
custom_minimum_size = Vector2(195, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.14
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 76.0
offset_right = 186.0
offset_bottom = -15.385
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(-22, 112)
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "INTERPRETER_2_SCENARIO_T3"
fit_content = true
scroll_active = false
custom_effects = [ExtResource("4_kkmuj")]
script = ExtResource("5_q6r75")
debugging = true

[node name="Emergency_NPR" type="NinePatchRect" parent="Scenario_VB/Scenario_Emergency_MC/Emergency_C/Emergency_TR/Emergency_RTL"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -10.0
offset_right = 14.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("9_7ly4h")
draw_center = false
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Scenario_Location_MC" type="MarginContainer" parent="Scenario_VB" node_paths=PackedStringArray("descriptionText")]
custom_minimum_size = Vector2(0, 83)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 80
script = ExtResource("10_lhgno")
_debug = true
_updateInEditor = true
adjust_top = true
top_multiplier = 26.0
top_addition = 5.0
adjust_bottom = true
bottom_multiplier = 0.0
bottom_addition = 80.0
descriptionText = NodePath("Location_C/Location_TR/Location_RTL")

[node name="Location_C" type="Control" parent="Scenario_VB/Scenario_Location_MC"]
layout_mode = 2

[node name="Location_TR" type="TextureRect" parent="Scenario_VB/Scenario_Location_MC/Location_C"]
visible = false
z_index = 1
custom_minimum_size = Vector2(80, 83)
layout_mode = 2
offset_right = 80.0
offset_bottom = 83.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(40, 41.5)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("11_e2mk7")
expand_mode = 1

[node name="Location_RTL" type="RichTextLabel" parent="Scenario_VB/Scenario_Location_MC/Location_C/Location_TR"]
visible = false
z_as_relative = false
clip_contents = false
custom_minimum_size = Vector2(195, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.14
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 76.0
offset_right = 186.0
offset_bottom = -15.385
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(-22, 60)
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "INTERPRETER_2_SCENARIO_T4"
fit_content = true
scroll_active = false
custom_effects = [ExtResource("4_kkmuj")]
script = ExtResource("5_q6r75")
debugging = true

[node name="Location_NPR" type="NinePatchRect" parent="Scenario_VB/Scenario_Location_MC/Location_C/Location_TR/Location_RTL"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -10.0
offset_right = 14.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("9_7ly4h")
draw_center = false
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Operator_C" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Operator_Bubble" type="MarginContainer" parent="Operator_C"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -10.0
offset_right = 319.0
offset_bottom = 214.0
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(0, 224)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 21
theme_override_constants/margin_bottom = 19
script = ExtResource("13_04xjp")
_debug = true
_updateInEditor = true
min_width = 200
max_width = 200
_autostart = true
_autoTitle = "COMMON_000SAYS"
_autoColor = Color(0.851, 0.851, 0.851, 0.3)

[node name="BubbleText" type="RichTextLabel" parent="Operator_C/Operator_Bubble"]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
clip_contents = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("7_c3pe2")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_q6r75")

[node name="BubbleBG" type="NinePatchRect" parent="Operator_C/Operator_Bubble/BubbleText"]
self_modulate = Color(0.851, 0.851, 0.851, 0.3)
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -11.0
offset_right = 13.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("15_38vxp")
patch_margin_left = 24
patch_margin_top = 20
patch_margin_right = 24
patch_margin_bottom = 15

[node name="BubbleTitleTop" type="Label" parent="Operator_C/Operator_Bubble/BubbleText/BubbleBG"]
layout_mode = 2
offset_left = 12.0
offset_top = -31.0
offset_right = 192.0
offset_bottom = -7.0
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
theme_override_fonts/font = ExtResource("7_c3pe2")
theme_override_font_sizes/font_size = 16
text = "COMMON_000SAYS"
autowrap_mode = 3
uppercase = true

[node name="BubbleTitleBottom" type="Label" parent="Operator_C/Operator_Bubble/BubbleText/BubbleBG"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 4.0
offset_right = 192.0
offset_bottom = 55.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.5)
theme_override_fonts/font = ExtResource("7_c3pe2")
theme_override_font_sizes/font_size = 16
text = "YOU SAY"
autowrap_mode = 3
uppercase = true

[node name="BubbleTouchHint" type="Control" parent="Operator_C/Operator_Bubble/BubbleText/BubbleBG"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Circle" type="TextureRect" parent="Operator_C/Operator_Bubble/BubbleText/BubbleBG/BubbleTouchHint"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.667
offset_top = -43.0
offset_right = 44.333
offset_bottom = 45.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("15_1tbva")
expand_mode = 1

[node name="PointingHand" type="TextureRect" parent="Operator_C/Operator_Bubble/BubbleText/BubbleBG/BubbleTouchHint"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -63.0
offset_right = 51.0
offset_bottom = 52.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("16_wvcp0")
expand_mode = 1

[node name="BubbleTouchButton" type="Button" parent="Operator_C/Operator_Bubble"]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="LadPhone" type="TextureRect" parent="Operator_C"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -499.0
offset_top = 64.0
offset_right = -58.0
offset_bottom = 528.0
grow_horizontal = 0
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(0, 232)
texture = ExtResource("14_7ly4h")
expand_mode = 1

[node name="YouSay_Bubble" parent="." instance=ExtResource("8_yiaac")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 0
_autoText = "..."
_autoTitle = "COMMON_YOUSAY"
_autoTouchHint = true
old_text = "..."

[node name="Buttons_VB" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="Continue_Bubble" parent="Buttons_VB" instance=ExtResource("8_yiaac")]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
_debug = false
min_height = 0
min_width = 42
_autoText = "INTERPRETER_1_LETSTRY_B1"
_autoTitle = ""
_autoShape = 1
old_text = "INTERPRETER_1_LETSTRY_B1"

[node name="HSeparator" type="HSeparator" parent="Buttons_VB"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="Comments_C" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Comment_Bubble" parent="Comments_C" instance=ExtResource("8_yiaac")]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -315.714
offset_top = -104.0
offset_right = 0.0
offset_bottom = 3.05176e-05
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(320, 150)
size_flags_horizontal = 4
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 30
min_height = 42
min_width = 150
max_width = 210
_autoText = "They always ask this question first"
_autoTitle = ""
_autoTitleBelow = false
_autoShape = 2
old_text = "They always ask this question first"

[node name="LadComment1" type="TextureRect" parent="Comments_C"]
z_index = 2
custom_minimum_size = Vector2(220, 505.5)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 180.0
offset_right = 40.0
offset_bottom = 685.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_7ltpq")
expand_mode = 1

[node name="Overlay" type="TextureRect" parent="Comments_C"]
visible = false
modulate = Color(0, 0, 0, 0)
z_index = 1
custom_minimum_size = Vector2(220, 505.5)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -854.0
offset_top = -1270.0
offset_right = 506.0
offset_bottom = 449.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("15_38vxp")
expand_mode = 1

[connection signal="last_sentence_changed" from="." to="YouSay_Bubble" method="set_text"]
[connection signal="text_populated_with_lines" from="Scenario_VB/Scenario_Info_MC/Info_C/Info_TR/Info_RTL" to="Scenario_VB/Scenario_Info_MC" method="set_margins_from_lines"]
[connection signal="text_populated_with_lines" from="Scenario_VB/Scenario_Emergency_MC/Emergency_C/Emergency_TR/Emergency_RTL" to="Scenario_VB/Scenario_Emergency_MC" method="set_margins_from_lines"]
[connection signal="text_populated_with_lines" from="Scenario_VB/Scenario_Location_MC/Location_C/Location_TR/Location_RTL" to="Scenario_VB/Scenario_Location_MC" method="set_margins_from_lines"]
[connection signal="touch_input" from="Operator_C/Operator_Bubble" to="." method="start_speech_recognition"]
[connection signal="meta_link_1" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_1"]
[connection signal="meta_link_2" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_2"]
[connection signal="meta_link_3" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_3"]
[connection signal="meta_link_4" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_4"]
[connection signal="meta_link_5" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_5"]
[connection signal="meta_link_6" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_6"]
[connection signal="meta_link_7" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_7"]
[connection signal="meta_link_8" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_8"]
[connection signal="meta_link_9" from="Operator_C/Operator_Bubble/BubbleText" to="Operator_C/Operator_Bubble" method="_send_meta_link_9"]
[connection signal="pressed" from="Operator_C/Operator_Bubble/BubbleTouchButton" to="Operator_C/Operator_Bubble" method="received_touch_input"]
[connection signal="touch_input" from="YouSay_Bubble" to="." method="start_speech_recognition"]
[connection signal="meta_link_1" from="Buttons_VB/Continue_Bubble" to="." method="play_animation" binds= ["Interpreter/Interpreter_1u_Repeat"]]
[connection signal="meta_link_2" from="Buttons_VB/Continue_Bubble" to="." method="play_animation" binds= ["Interpreter/Interpreter_3_Call"]]
